1. Used correct CSS comment maker -- instead of using // used /* and */ to mark comment section 2. Corrected text alignment for both LTR & RTL languages

--- a/src/main/resources/skins/default/css/ltr-lang.css
+++ b/src/main/resources/skins/default/css/ltr-lang.css
@@ -21,9 +21,9 @@
  *
  */
 
-//----------------------------------------------------------------------------
+/*----------------------------------------------------------------------------
 // Title Row
-//----------------------------------------------------------------------------
+//--------------------------------------------------------------------------*/
 #PageAttachment .TitleRow 
 { 
     text-align: left;
@@ -48,9 +48,9 @@
     padding-right: 0.5em;
 }
 
-//----------------------------------------------------------------------------
+/*----------------------------------------------------------------------------
 // Header Row
-//----------------------------------------------------------------------------
+//--------------------------------------------------------------------------*/
 
 #PageAttachment .HeaderRow
 { 
@@ -82,9 +82,9 @@
 { 
 }
 
-//----------------------------------------------------------------------------
+/*----------------------------------------------------------------------------
 // Attachment Rows
-//----------------------------------------------------------------------------
+//--------------------------------------------------------------------------*/
 
 #PageAttachment .AttachmentRow
 { 
@@ -110,7 +110,7 @@
 
 #PageAttachment .attachmentRow_col_4
 { 
-    text-align: rigt;
+    text-align: left;
 }
 
 #PageAttachment .attachmentRow_col_5
