--- a/src/main/resources/skins/default/css/rtl-lang.css
+++ b/src/main/resources/skins/default/css/rtl-lang.css
@@ -21,9 +21,9 @@
  *
  */
 
-//----------------------------------------------------------------------------
+/*----------------------------------------------------------------------------
 // Title Row
-//----------------------------------------------------------------------------
+//--------------------------------------------------------------------------*/
 
 #PageAttachment .TitleRow
 {
@@ -49,9 +49,9 @@
     padding-right: 0.5em;
 }
 
-//----------------------------------------------------------------------------
+/*----------------------------------------------------------------------------
 // Header Row
-//----------------------------------------------------------------------------
+//--------------------------------------------------------------------------*/
 
 #PageAttachment .HeaderRow
 { 
@@ -83,9 +83,9 @@
     padding-right: 0.5em;
 }
 
-//----------------------------------------------------------------------------
+/*----------------------------------------------------------------------------
 // Attachment Rows
-//----------------------------------------------------------------------------
+//--------------------------------------------------------------------------*/
 
 #PageAttachment .AttachmentRow
 { 
@@ -110,7 +110,7 @@
 
 #PageAttachment .attachmentRow_col_4
 { 
-    text-align: right;
+    text-align: left;
 }
 
 #PageAttachment .attachmentRow_col_5
